<resources>
    <string name="app_name">HW6_Android_Services</string>
    <string name="main_activity_title">Services App</string>
    <string name="main_activity_instruction">The purpose of the App is to study the role of Android
        System in creating and managing the lifecycle of Bound and Local Services.
    </string>
    <string name="main_activity_btn_download">PDFs Download Activity</string>
    <string name="main_activity_close">Close</string>

    <string name="action_settings">Settings</string>
    <string name="download_activity_title">PDF Download Activity</string>
    <string name="instruction">Please provide list of five SJSU PDFs to download
        * hardcode of files is file! or you can provide full qualified names...
    </string>
    <string name="pdf1">PDF1 File Location:</string>
    <string name="pdf2">PDF2 File Location:</string>
    <string name="pdf3">PDF3 File Location:</string>
    <string name="pdf4">PDF4 File Location:</string>
    <string name="pdf5">PDF5 File Location:</string>
    <string name="download_btn">Start download</string>
</resources>
